--- a/myApp/www/css/map.css
+++ b/myApp/www/css/map.css
@@ -1,10 +1,2 @@
-#map {
-  width: 100%;
-  height: 100%;
-}
-
-.scroll {
-  height: 100%;
-}
-
-.buscador {}
+#map { width: 100%; height: 100%;}
+.scroll { height: 100%;}
