--- a/myApp/www/lib/ionic/css/ionic.css
+++ b/myApp/www/lib/ionic/css/ionic.css
@@ -5361,7 +5361,7 @@ a.item-content {
     border-bottom-left-radius: 2px; }
 
 .card .item:last-child, .list-inset .item:last-child {
-  margin-bottom: -1px; }
+  margin-bottom: 10px 0 0; }
 
 .card .item, .list-inset .item, .padding > .list .item, .padding-horizontal > .list .item {
   margin-right: 0;
